--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@mui/material": "^6.4.1",
     "@mui/styled-engine-sc": "^6.4.0",
+    "@reduxjs/toolkit": "^2.5.0",
+    "@worldcoin/idkit": "^1.3.0",
+    "lodash": "^4.17.21",
     "next": "15.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
