--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "15.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "styled-components": "^6.1.14"
+    "styled-components": "^6.1.14",
+    "yarn": "^1.22.22"
   }
 }
