--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mui/material": "^6.4.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.3",
     "@mui/styled-engine-sc": "^6.4.0",
     "@reduxjs/toolkit": "^2.5.0",
     "@worldcoin/idkit": "^1.3.0",
