--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "@worldcoin/idkit": "^1.3.0",
     "lodash": "^4.17.21",
+    "lottie-react": "^2.4.1",
     "next": "15.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
