--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@heroicons/react": "^2.2.0",
     "@mui/material": "^6.4.3",
     "@mui/styled-engine-sc": "^6.4.0",
     "@reduxjs/toolkit": "^2.5.0",
+    "@reown/appkit": "^1.6.8",
+    "@reown/appkit-adapter-wagmi": "^1.6.8",
+    "@tanstack/react-query": "^5.66.3",
     "@worldcoin/idkit": "^1.3.0",
     "lodash": "^4.17.21",
     "lottie-react": "^2.4.1",
@@ -21,6 +25,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "styled-components": "^6.1.14",
+    "viem": "^2.23.2",
+    "wagmi": "^2.14.11",
     "yarn": "^1.22.22"
   }
 }
