--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "15.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
     "styled-components": "^6.1.14",
     "viem": "^2.23.2",
     "wagmi": "^2.14.11",
