--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@reown/appkit-adapter-wagmi": "^1.6.8",
     "@tanstack/react-query": "^5.66.3",
     "@worldcoin/idkit": "^1.3.0",
+    "gun": "^0.2020.1240",
     "lodash": "^4.17.21",
     "lottie-react": "^2.4.1",
     "next": "15.1.5",
