--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@heroicons/react": "^2.2.0",
+    "@lit-protocol/auth-helpers": "^7.0.7",
+    "@lit-protocol/constants": "^7.0.7",
+    "@lit-protocol/encryption": "^7.0.7",
+    "@lit-protocol/lit-node-client": "^7.0.7",
     "@mui/material": "^6.4.3",
     "@mui/styled-engine-sc": "^6.4.0",
     "@reduxjs/toolkit": "^2.5.0",
@@ -20,6 +24,7 @@
     "@reown/appkit-adapter-wagmi": "^1.6.8",
     "@tanstack/react-query": "^5.66.3",
     "@worldcoin/idkit": "^1.3.0",
+    "ethers": "^5.8.0",
     "gun": "^0.2020.1240",
     "lodash": "^4.17.21",
     "lottie-react": "^2.4.1",
