--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@reown/appkit": "^1.6.8",
     "@reown/appkit-adapter-wagmi": "^1.6.8",
     "@tanstack/react-query": "^5.66.3",
+    "aws-sdk": "^2.1692.0",
     "ethers": "^5.8.0",
     "gun": "^0.2020.1240",
     "lodash": "^4.17.21",
