--- a/package.json
+++ b/package.json
@@ -24,15 +24,19 @@
     "@reown/appkit-adapter-wagmi": "^1.6.8",
     "@tanstack/react-query": "^5.66.3",
     "aws-sdk": "^2.1692.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
     "ethers": "^5.8.0",
     "gun": "^0.2020.1240",
     "lodash": "^4.17.21",
     "lottie-react": "^2.4.1",
     "next": "15.1.5",
+    "path-browserify": "^1.0.1",
     "pino-pretty": "^13.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
+    "stream-browserify": "^3.0.0",
     "styled-components": "^6.1.14",
     "text-encoding": "^0.7.0",
     "viem": "^2.23.2",
