--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "stream-browserify": "^3.0.0",
     "styled-components": "^6.1.14",
     "text-encoding": "^0.7.0",
+    "text-encoding-polyfill": "^0.6.7",
     "viem": "^2.23.2",
     "wagmi": "^2.14.11",
     "yarn": "^1.22.22"
