--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emailjs/browser": "^4.4.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@gelatonetwork/relay-sdk": "^5.6.0",
     "@heroicons/react": "^2.2.0",
     "@lit-protocol/auth-helpers": "^7.0.7",
     "@lit-protocol/constants": "^7.0.7",
