--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "aws-sdk": "^2.1692.0",
     "ethers": "^5.8.0",
     "gun": "^0.2020.1240",
+    "html2canvas": "^1.4.1",
     "lodash": "^4.17.21",
     "lottie-react": "^2.4.1",
     "next": "15.1.5",
+    "nft.storage": "^7.2.0",
     "pino-pretty": "^13.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
