--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@reown/appkit": "^1.6.8",
     "@reown/appkit-adapter-wagmi": "^1.6.8",
     "@tanstack/react-query": "^5.66.3",
+    "@web3-storage/w3up-client": "^17.2.0",
     "aws-sdk": "^2.1692.0",
+    "axios": "^1.8.4",
     "ethers": "^5.8.0",
     "gun": "^0.2020.1240",
     "html2canvas": "^1.4.1",
@@ -32,6 +34,7 @@
     "lottie-react": "^2.4.1",
     "next": "15.1.5",
     "nft.storage": "^7.2.0",
+    "pinata": "^2.1.0",
     "pino-pretty": "^13.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
